WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242671
Fix event.relatedTarget for focusin event when shadow tree state was changed by the focus event
https://bugs.webkit.org/show_bug.cgi?id=242671
Summary
Fix event.relatedTarget for focusin event when shadow tree state was changed ...
Tim Nguyen (:ntim)
Reported
2022-07-12 18:39:37 PDT
rdar://95524130
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2022-07-12 18:50:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2354
EWS
Comment 2
2022-07-19 21:06:09 PDT
Committed
252631@main
(73d8160d105b): <
https://commits.webkit.org/252631@main
> Reviewed commits have been landed. Closing PR #2354 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug